Merge frame time section of the Status bar with the framerate section